Added group member's names and UCID's

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<!-- index.html -->
+<!-- File: index.html
+    Group Members: Kosy Onyejemezi, Uchenna Osemeka
+    UCID: 30189156, ...
+    Due Date: Feb 05, 2024
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
