--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!-- File: index.html
-    Group Members: Kosy Onyejemezi, Uchenna Osemeka
-    UCID: 30189156, ...
-    Due Date: Feb 05, 2024
--->
+     Group Members: Kosy Onyejemezi, Uchenna Osemeka
+     UCID: 30189156, ...
+     Due Date: Feb 05, 2024 -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
