--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <!-- Logo and website name go here -->
-        <img src="logo.png" alt="Company Logo" width="130">
+        <img src="logo.png" alt="Company Logo" width="130" align="left">
         <h1> Trend Traverse </h1>
     </header>
     <div>
