--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Company Logo" width="130">
+        <img src="logo.png" alt="Company Logo" width="130" align="left">
         <h1> Trend Traverse </h1>
     </header>
     <div>
