--- a/login.html
+++ b/login.html
@@ -14,15 +14,14 @@
         <img src="logo.png" alt="Company Logo" width="130" align="left">
         <h1> Trend Traverse </h1>
     </header>
-    <div>
-        <!-- Navigation links go here -->
+    <div align="center" style="font-size: 20px;">
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
+            <a href="./index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+            <a href="./product.html">Product Catalog</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+            <a href="./contact.html">Contact Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+            <a href="./login.html">Log In</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
         </nav>
+    <!-- Navigation links go here -->
     </div>
     <main>
         <section class="login-form">
