--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- About Us Section -->
         <section class="about-us">
             <!-- About Us contents go here -->
-            <h2>About Us</h2>
+            <h2 align="center">About Us</h2>
             <h3>Our Mission</h3>
             <p>At Trend Traverse, our mission is to revolutionize the fashion experience, serving as the catalyst for global trendsetters. We are dedicated to meticulously curating a diverse and ever-evolving collection of stylish clothing and accessories. Through an unwavering commitment to accessibility and fostering a vibrant community, we strive to empower individuals to express their unique identities confidently. Trend Traverse is on a mission to redefine fashion by providing an inclusive space where everyone can find inspiration, celebrate individuality, and embark on a journey of self-expression.</p>
             <h3>Our Vision</h3>
