--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
     </div>
     <main>
         <section class="login-form">
-            <h2>Login Page</h2>
+            <h2 align="center">Login Page</h2>
             <form>
                 <fieldset>
                     <label for="username">Username:</label>
