--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- File: index.html
      Group Members: Kosy Onyejemezi, Uchenna Osemeka
-     UCID: 30189156, ...
+     UCID: 30189156, 30132267
      Due Date: Feb 05, 2024 -->
 
 <!DOCTYPE html>
