--- a/login.html
+++ b/login.html
@@ -1,4 +1,7 @@
-<!-- login.html -->
+<!-- File: login.html
+     Group Members: Kosy Onyejemezi, Uchenna Osemeka
+     UCID: 30189156, 30132267
+     Due Date: Feb 05, 2024 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
