initial commit of Assignment 2

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 <body>
     <header>
         <!-- Logo and website name go here -->
-        <img src="logo.png" alt="Company Logo" width="130" align="left">
-        <h1> Trend Traverse </h1>
+        <img src="logo.png" alt="Company Logo" width="130" align="left" class= "flex-item-1">
+        <h1 class= "flex-item-2"> Trend Traverse </h1>
     </header>
     <div align="center" style="font-size: 20px;">
          <nav>
-             <a href="./index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
-             <a href="./product.html">Product Catalog</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
-             <a href="./contact.html">Contact Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
-             <a href="./login.html">Log In</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+             <a href="./index.html" class= "flex-item-3">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+             <a href="./product.html" class= "flex-item-3">Product Catalog</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+             <a href="./contact.html" class= "flex-item-3">Contact Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+             <a href="./login.html" class= "flex-item-3">Log In</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
          </nav>
      <!-- Navigation links go here -->
     </div>
@@ -34,14 +34,14 @@
         <section class="about-us">
             <!-- About Us contents go here -->
             <h2 align="center">About Us</h2>
-            <h3>Our Mission</h3>
+            <section><h3>Our Mission</h3></p>
             <p>At Trend Traverse, our mission is to revolutionize the fashion experience, serving as the catalyst for global trendsetters. We are dedicated to meticulously curating a diverse and ever-evolving collection of stylish clothing and accessories. Through an unwavering commitment to accessibility and fostering a vibrant community, we strive to empower individuals to express their unique identities confidently. Trend Traverse is on a mission to redefine fashion by providing an inclusive space where everyone can find inspiration, celebrate individuality, and embark on a journey of self-expression.</p>
-            <h3>Our Vision</h3>
+            </section><h3>Our Vision</h3>
             <p>Trend Traverse aspires to lead the fashion industry by sparking a global fashion revolution. We envision a world where people confidently express their individuality through continually evolving styles. Our goal is to unite a diverse community of fashion enthusiasts who share a passion for innovation and self-expression. Trend Traverse aims to be at the forefront of shaping the future of fashion, where every wardrobe tells a story and empowers individuals to confidently traverse the ever-changing landscapes of style.</p>
         </section>
         <section class="shop-now">
             <!-- Shop Now Button (as a link to the Products page) -->
-            <input type="submit" onclick="location.href='products.html'" style="width: 100px;height: 30px;font-size: medium;color: rgb(255, 199, 199);background-color: rgb(199, 47, 39);" value="Shop Now!">
+            <input type="submit" onclick="location.href='products.html'"  value="Shop Now!">
         </section> <br>
         <!-- Customer Reviews/Testimonials Section -->
         <section class="customer-reviews" style="border: 2px solid black; margin: 0;">
