First version of styling to index.html
changed company name and navigation links to white for visibility

removed inline css from shop now button: style="width: 100px;height: 30px;font-size: medium;color: rgb(255, 199, 199);background-color: rgb(199, 47, 39);"

removed inline styling from customer reviews :style="border: 2px solid black; margin: 0;"

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <input type="submit" onclick="location.href='products.html'"  value="Shop Now!">
         </section> <br>
         <!-- Customer Reviews/Testimonials Section -->
-        <section class="customer-reviews" style="border: 2px solid black; margin: 0;">
+        <section class="customer-reviews" >
             <!-- Add reviews as needed -->
             <h2>Customer Reviews</h2>
             <p>John Doe: <br> <i style="padding-left: 20px;">"I recently purchased the Retro Denim Jacket from this store, and I couldn't be happier! The quality is outstanding, and it's the perfect addition to my wardrobe. The customer service was exceptional, and the shipping was super fast. This is my go-to for trendy fashion pieces!"</i></p>
