Updated product page
Almost finished product.html according to reguired specs, all that's left is button. Moving to login and contact

--- a/Contact.html
+++ b/Contact.html
@@ -10,6 +10,7 @@
 <meta name="description" content="Browse our latests products curated from the best around the globe">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="Uchenna Osemeka">
+<link rel="stylesheet" href="styles.css">
 <!-- Add meta tags, title, and link to styles.css here -->
 </head>
 <body>
@@ -18,16 +19,16 @@
     <img src= "logo.png" alt="Company Logo" style="width: 10%; height: 5%">
     Placegolder for index.html name
     </p>-->
-    <img src="logo.png" alt="Company Logo" width="130" align="left">
-    <h1> Trend Traverse </h1>
+    <img src="logo.png" alt="Company Logo" width="130" align="left" class= "flex-item-1">
+    <h1 class= "flex-item-2"> Trend Traverse </h1>
 <!-- Logo and website name go here -->
 </header>
 <div align="center" style="font-size: 20px;">
     <nav>
-        <a href="./index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
-        <a href="./product.html">Product Catalog</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
-        <a href="./contact.html">Contact Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
-        <a href="./login.html">Log In</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+        <a href="./index.html" class= "flex-item-3">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+        <a href="./product.html" class= "flex-item-3">Product Catalog</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+        <a href="./contact.html" class= "flex-item-3">Contact Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+        <a href="./login.html" class= "flex-item-3">Log In</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
     </nav>
 <!-- Navigation links go here -->
 </div>
