--- a/login.html
+++ b/login.html
@@ -14,15 +14,15 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Company Logo" width="130" align="left">
-        <h1> Trend Traverse </h1>
+        <img src="logo.png" alt="Company Logo" width="130" align="left" class= "flex-item-1">
+        <h1 class= "flex-item-2"> Trend Traverse </h1>
     </header>
     <div align="center" style="font-size: 20px;">
         <nav>
-            <a href="./index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
-            <a href="./product.html">Product Catalog</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
-            <a href="./contact.html">Contact Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
-            <a href="./login.html">Log In</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+            <a href="./index.html" class= "flex-item-3">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+            <a href="./product.html" class= "flex-item-3">Product Catalog</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+            <a href="./contact.html" class= "flex-item-3">Contact Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
+            <a href="./login.html" class= "flex-item-3">Log In</a>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;
         </nav>
     <!-- Navigation links go here -->
     </div>
