Finished contact page

--- a/Contact.html
+++ b/Contact.html
@@ -39,23 +39,27 @@
     </tr>
     <tr>
         <td align="center" style="font-size: 20px;">
-          <p style="font-family: Arial, sans-serif;"> Here at Trend Traverse, we take customer service very seriously.</p><p style="font-family: Arial, sans-serif;"> Reach out to us through email or phone, or contact us through social media, and we will do our best to address your concerns in a timely manner.</p>
+          <p style="font-family: Arial, sans-serif;" class= "flex-item-4"> Here at Trend Traverse, we take customer service very seriously.</p><p style="font-family: Arial, sans-serif;" class= "flex-item-4"> Reach out to us through email or phone, or contact us through social media, and we will do our best to address your concerns in a timely manner.</p>
         </td>
         <td align="center" style="font-size: 20px; width: 500px;">
-        Phone: (780) 424-5008</br>
-        Email: info@trendtraverse.ca</br>
-        Hours of Operation:</br>
-        Monday to Friday: 9:00 AM to 5:00 PM</br>
-        Saturday: 10:00 AM to 4:00 PM</br>
-        Sunday: Closed</br>
-        Holidays: Closed</br>
-        Need to get in touch after hours? Call (780) 424-5008.</br>
+        <div class= "contact-method">Phone: (780) 424-5008</div>
+		
+        <div class= "contact-method">Email: info@trendtraverse.ca</div>
+	
+        <div class= "contact-method">Hours of Operation:</div>
+		
+        <div class= "contact-method">Monday to Friday: 9:00 AM to 5:00 PM</div>
+		
+        <div class= "contact-method">Saturday: 10:00 AM to 4:00 PM</div>
+        <div class= "contact-method">Sunday: Closed</div>
+        <div class= "contact-method">Holidays: Closed</div>
+        <div class= "contact-method">Need to get in touch after hours? Call (780) 424-5008.</div>
         </td>
         <td align="center" style="width: 250px;">
-            <a href="https://www.instagram.com/"><img src="images/instagram-logo.webp" alt="instagram contact link" width= "80px" height="80px"></a>
-            <a href="https://www.facebook.com/"><img src="images/Facebook_Logo.webp" alt="facebook contact link" width= "80px" height="80px"></a>
-            <a href="https://www.twitter.com/"><img src="images/Twitter-logo.webp" alt="instagram contact link" width= "80px" height="80px"></a>
-            <a href="https://www.youtube.com/"><img src="images/youtube-logo.webp" alt="instagram contact link" width= "80px" height="80px"></a>
+            <a href="https://www.instagram.com/" class= "flex-item-5"><img src="images/instagram-logo.webp" alt="instagram contact link" width= "80px" height="80px" ></a>
+            <a href="https://www.facebook.com/" class= "flex-item-5"><img src="images/Facebook_Logo.webp" alt="facebook contact link" width= "80px" height="80px"></a>
+            <a href="https://www.twitter.com/" class= "flex-item-5"><img src="images/Twitter-logo.webp" alt="instagram contact link" width= "80px" height="80px"></a>
+            <a href="https://www.youtube.com/" class= "flex-item-5"><img src="images/youtube-logo.webp" alt="instagram contact link" width= "80px" height="80px"></a>
         </td>
     </tr>
 </table>
