Completed everything other than sign up button
css not working

--- a/Product.html
+++ b/Product.html
@@ -50,14 +50,14 @@
             <h3>Versace Dylan Purple Pour Femme</h3>
             <p class= "price-text"> CAD 79.92</p>
             <p> Eau de Parfum</p>
-            <a href="add_to_cart.html"><img src="add to cart button.png" alt="Add to Cart" width= 30%" height="30%"></a>
+            <button type="add">Add to Cart</button>
 
         </td>
         <td align="center">
             <h3>Tarifa Soul Rouge</h3>
             <p class= "price-text"> CAD 215.96</p>
             <p> Dresses</p>
-            <a href="add_to_cart.html"><img src="add to cart button.png" alt="Add to Cart" width= 30%" height="30%"></a>
+            <button type="add">Add to Cart</button>
         </td>
     </tr>
     <tr>
@@ -73,14 +73,14 @@
             <h3>Flora Mortis</h3>
             <p class= "price-text"> CAD 49.92</p>
             <p> Eau de Parfum</p>
-            <a href="add_to_cart.html"><img src="add to cart button.png" alt="Add to Cart" width= "30%" height="30%"></a>
+            <button type="add">Add to Cart</button>
 
         </td>
         <td align="center">
             <h3>Cramento's Summer</h3>
             <p class= "price-text"> CAD 36.22</p>
             <p> Dresses</p>
-            <a href="add_to_cart.html"><img src="add to cart button.png" alt="Add to Cart" width= "30%" height="30%"></a>
+            <button type="add">Add to Cart</button>
         </td>
     </tr>
 
