--- a/Contact.html
+++ b/Contact.html
@@ -33,13 +33,13 @@
 <!-- Navigation links go here -->
 </div>
 <main>
-<table style="width:100%; height:100%;" border="1px">
+<table style="width:100%; height:100%;" border="1px" class= "flex-item-4">
     <tr>
       <td colspan="3" align="center" style="font-size: 30px;">Contact Us</td>
     </tr>
     <tr>
         <td align="center" style="font-size: 20px;">
-          <p style="font-family: Arial, sans-serif;" class= "flex-item-4"> Here at Trend Traverse, we take customer service very seriously.</p><p style="font-family: Arial, sans-serif;" class= "flex-item-4"> Reach out to us through email or phone, or contact us through social media, and we will do our best to address your concerns in a timely manner.</p>
+          <p style="font-family: Arial, sans-serif;"> Here at Trend Traverse, we take customer service very seriously.</p><p style="font-family: Arial, sans-serif;"> Reach out to us through email or phone, or contact us through social media, and we will do our best to address your concerns in a timely manner.</p>
         </td>
         <td align="center" style="font-size: 20px; width: 500px;">
         <div class= "contact-method">Phone: (780) 424-5008</div>
