--- a/login.html
+++ b/login.html
@@ -32,13 +32,13 @@
             <form>
                 <fieldset>
                     <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required> <br>
+                    <input type="text" id="username" name="username" placeholder="Enter your username"required> <br>
                     <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required> <br>
+                    <input type="password" id="password" name="password" placeholder="Password"required> <br>
                     <button type="submit">Login</button>
                 </fieldset>
-            </form>
-            <p>Don't have an account yet? <a href="#">Sign up here!</a></p>
+            </form><br>
+            <p>Don't have an account yet? <a href="#" class= "flex-item-6">Sign up here!</a></p>
         </section>
     </main>
     <footer>
