Final documentation fixes

--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,7 @@
-<!-- File: Contact.html
-     Group Members: Kosy Onyejemezi, Uchenna Osemeka
-     UCID: 30189156, 30132267
-     Due Date: Feb 05, 2024 -->
+<!-- File: login.html
+     Group Members: Uchenna Osemeka, Caue Rodrigues
+     UCID: 30132267
+     Due Date: Feb 26, 2024 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
